Adicionando filmes e descricoes a pagina

--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Batman segue o segundo ano de Bruce Wayne (Robert Pattinson) como o herói de Gotham. Com apenas alguns aliados de confiança – Alfred Pennyworth (Andy Serkis) e o tenente James Gordon (Jeffrey Wright) – entre a rede corrupta de funcionários e figuras importantes da cidade, o vigilante solitário se estabeleceu como a personificação da vingança.</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://m.media-amazon.com/images/I/91+od0A3itL._AC_SY879_.jpg" alt="Deadpool 2"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Deadpool 2</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>7.9</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -66,21 +66,21 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Quando o super soldado Cable (Josh Brolin) chega em uma missão para assassinar o jovem mutante Russel (Julian Dennison), o mercenário Deadpool (Ryan Reynolds) precisa aprender o que é ser herói de verdade para salvá-lo. Para isso, ele recruta seu velho amigo Colossus e forma o novo grupo X-Force, sempre com o apoio do fiel escudeiro Dopinder (Karan Soni).</span>
         </div>
       </div>
 
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="https://m.media-amazon.com/images/I/91J7VHbAwBL._AC_SL1500_.jpg" alt="Vingadores Ultimato"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Vingadores Ultimato</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>7.9</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Lorem Ipsum is simply Lar dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+          <span>Em Vingadores: Ultimato, após Thanos eliminar metade das criaturas vivas em Vingadores: Guerra Infinita, os heróis precisam lidar com a dor da perda de amigos e seus entes queridos. Com Tony Stark (Robert Downey Jr.) vagando perdido no espaço sem água nem comida, o Capitão América/Steve Rogers (Chris Evans) e a Viúva Negra/Natasha Romanov (Scarlett Johansson) precisam liderar a resistência contra o titã louco.</span>
         </div>
       </div>
     </div>
