--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h4>Vingadores Ultimato</h4>
             <div class="rating-favorites">
               <div class="rating">
-                < src="images/star.png" alt="Star Icon"/>
+                <img src="images/star.png" alt="Star Icon"/>
                 <span>7.9</span>
               </div>
               <div class="favorite">
