Alterando a descrição do filme Vingadores

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="movie-description">
-          <span>Em Vingadores: Ultimato, após Thanos eliminar metade das criaturas vivas em Vingadores: Guerra Infinita, os heróis precisam lidar com a dor da perda de amigos e seus entes queridos. Com Tony Stark (Robert Downey Jr.) vagando perdido no espaço sem água nem comida, o Capitão América/Steve Rogers (Chris Evans) e a Viúva Negra/Natasha Romanov (Scarlett Johansson) precisam liderar a resistência contra o titã louco.</span>
+          <span>As coisas na Terra estão sombrias. Após o poder das Joias do Infinito ter dizimado metade da população, Thanos (Josh Brolin) tomou o manto como governante do universo, deixando os Vingadores em ruína. Portanto, Viúva Negra (Scarlett Johansson), Thor (Chris Hemsworth), Capitão América (Chris Evans) e Bruce Banner (Mark Ruffalo) devem permanecer resilientes e reunir os mais poderosos heróis para detê-lo, junto com a Capitã Marvel (Brie Larson).</span>
         </div>
       </div>
     </div>
